# challenge

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt
test/source/: acacia-challenge_test.cpp
